[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Яков"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.17"
mysqlclient = "^2.2.7"
environs = "14.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    "venv",
    "docker",
    ".git",
    "__pycache__",
    "migrations/*",
    "*.pyc",
]

line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"